--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../src/assets/favicon/Favicon.ico"
+      href="/Weather-App/assets/Favicon-CWq3Heng.ico"
     />
 
     <title>Weather App</title>
